Implement task queue and notifications

--- a/config.json
+++ b/config.json
@@ -25,8 +25,11 @@
   "ui.index.5.parameter": "InternetGatewayDevice.LANDevice.1.WLANConfiguration.1.SSID",
   "ui.index.6.label": "Last inform",
   "ui.index.6.parameter": "Events.Inform",
-  "ui.index.6.meta.type": "overview-dot",
-  "ui.index.6.meta.chart": "online",
+  "ui.index.6.type": "container",
+  "ui.index.6.element": "span.inform",
+  "ui.index.6.components.1.type": "parameter",
+  "ui.index.6.components.2.type": "overview-dot",
+  "ui.index.6.components.2.chart": "online",
   "ui.overview.groups.online.label": "",
   "ui.overview.groups.online.charts.1": "online",
   "ui.overview.charts.online.label": "Online status",
@@ -40,43 +43,53 @@
   "ui.overview.charts.online.slices.others.color": "#f7fcb9",
   "ui.overview.charts.online.slices.others.filter": "Events.Inform < (NOW() - 5 * 60 * 1000) - (24 * 60 * 60 * 1000)",
   "ui.device.1.type": "parameter-list",
+  "ui.device.1.parameters.1.type": "container",
   "ui.device.1.parameters.1.label": "Last inform",
+  "ui.device.1.parameters.1.element": "span.inform",
   "ui.device.1.parameters.1.parameter": "Events.Inform",
-  "ui.device.1.parameters.1.meta.type": "overview-dot",
-  "ui.device.1.parameters.1.meta.chart": "online",
+  "ui.device.1.parameters.1.components.1.type": "parameter",
+  "ui.device.1.parameters.1.components.2.type": "overview-dot",
+  "ui.device.1.parameters.1.components.2.chart": "online",
+  "ui.device.1.parameters.1.components.3.type": "summon-button",
+  "ui.device.1.parameters.1.components.3.parameters.1": "InternetGatewayDevice.DeviceInfo.HardwareVersion",
+  "ui.device.1.parameters.1.components.3.parameters.2": "InternetGatewayDevice.DeviceInfo.SoftwareVersion",
+  "ui.device.1.parameters.1.components.3.parameters.3": "InternetGatewayDevice.WANDevice.1.WANConnectionDevice.1.WANIPConnection.1.MACAddress",
+  "ui.device.1.parameters.1.components.3.parameters.4": "InternetGatewayDevice.WANDevice.1.WANConnectionDevice.1.WANIPConnection.1.ExternalIPAddress",
+  "ui.device.1.parameters.1.components.3.parameters.5": "InternetGatewayDevice.LANDevice.1.WLANConfiguration.1.SSID",
+  "ui.device.1.parameters.1.components.3.parameters.6": "InternetGatewayDevice.LANDevice.1.WLANConfiguration.1.KeyPassphrase",
+  "ui.device.1.parameters.1.components.3.parameters.7": "InternetGatewayDevice.LANDevice.1.Hosts.Host",
   "ui.device.1.parameters.2.label": "Last boot",
   "ui.device.1.parameters.2.parameter": "Events.1_BOOT",
   "ui.device.1.parameters.3.label": "Last bootstrap",
   "ui.device.1.parameters.3.parameter": "Events.0_BOOTSTRAP",
   "ui.device.1.parameters.4.label": "Registered",
   "ui.device.1.parameters.4.parameter": "Events.Registered",
-  "ui.device.2.type": "parameter-list",
-  "ui.device.2.parameters.1.label": "Serial number",
-  "ui.device.2.parameters.1.parameter": "InternetGatewayDevice.DeviceInfo.SerialNumber",
-  "ui.device.2.parameters.2.label": "Product class",
-  "ui.device.2.parameters.2.parameter": "InternetGatewayDevice.DeviceInfo.ProductClass",
-  "ui.device.2.parameters.3.label": "OUI",
-  "ui.device.2.parameters.3.parameter": "InternetGatewayDevice.DeviceInfo.ManufacturerOUI",
-  "ui.device.2.parameters.4.label": "Manufacturer",
-  "ui.device.2.parameters.4.parameter": "InternetGatewayDevice.DeviceInfo.Manufacturer",
-  "ui.device.2.parameters.5.label": "Hardware version",
-  "ui.device.2.parameters.5.parameter": "InternetGatewayDevice.DeviceInfo.HardwareVersion",
-  "ui.device.2.parameters.6.label": "Software version",
-  "ui.device.2.parameters.6.parameter": "InternetGatewayDevice.DeviceInfo.SoftwareVersion",
-  "ui.device.2.parameters.7.label": "MAC",
-  "ui.device.2.parameters.7.parameter": "InternetGatewayDevice.WANDevice.1.WANConnectionDevice.1.WANIPConnection.1.MACAddress",
-  "ui.device.2.parameters.8.label": "IP",
-  "ui.device.2.parameters.8.parameter": "InternetGatewayDevice.WANDevice.1.WANConnectionDevice.1.WANIPConnection.1.ExternalIPAddress",
-  "ui.device.2.parameters.8.label": "WLAN SSID",
-  "ui.device.2.parameters.8.parameter": "InternetGatewayDevice.LANDevice.1.WLANConfiguration.1.SSID",
-  "ui.device.2.parameters.9.label": "WLAN passphrase",
-  "ui.device.2.parameters.9.parameter": "InternetGatewayDevice.LANDevice.1.WLANConfiguration.1.KeyPassphrase",
-  "ui.device.3.type": "parameter-table",
-  "ui.device.3.object": "InternetGatewayDevice.LANDevice.1.Hosts.Host",
-  "ui.device.3.parameters.1.label": "Host name",
-  "ui.device.3.parameters.1.parameter": "HostName",
-  "ui.device.3.parameters.2.label": "IP address",
-  "ui.device.3.parameters.2.parameter": "IPAddress",
-  "ui.device.3.parameters.3.label": "MAC address",
-  "ui.device.3.parameters.3.parameter": "MACAddress"
+  "ui.device.1.parameters.2.label": "Serial number",
+  "ui.device.1.parameters.2.parameter": "InternetGatewayDevice.DeviceInfo.SerialNumber",
+  "ui.device.1.parameters.3.label": "Product class",
+  "ui.device.1.parameters.3.parameter": "InternetGatewayDevice.DeviceInfo.ProductClass",
+  "ui.device.1.parameters.4.label": "OUI",
+  "ui.device.1.parameters.4.parameter": "InternetGatewayDevice.DeviceInfo.ManufacturerOUI",
+  "ui.device.1.parameters.5.label": "Manufacturer",
+  "ui.device.1.parameters.5.parameter": "InternetGatewayDevice.DeviceInfo.Manufacturer",
+  "ui.device.1.parameters.6.label": "Hardware version",
+  "ui.device.1.parameters.6.parameter": "InternetGatewayDevice.DeviceInfo.HardwareVersion",
+  "ui.device.1.parameters.7.label": "Software version",
+  "ui.device.1.parameters.7.parameter": "InternetGatewayDevice.DeviceInfo.SoftwareVersion",
+  "ui.device.1.parameters.8.label": "MAC",
+  "ui.device.1.parameters.8.parameter": "InternetGatewayDevice.WANDevice.1.WANConnectionDevice.1.WANIPConnection.1.MACAddress",
+  "ui.device.1.parameters.9.label": "IP",
+  "ui.device.1.parameters.9.parameter": "InternetGatewayDevice.WANDevice.1.WANConnectionDevice.1.WANIPConnection.1.ExternalIPAddress",
+  "ui.device.1.parameters.10.label": "WLAN SSID",
+  "ui.device.1.parameters.10.parameter": "InternetGatewayDevice.LANDevice.1.WLANConfiguration.1.SSID",
+  "ui.device.1.parameters.11.label": "WLAN passphrase",
+  "ui.device.1.parameters.11.parameter": "InternetGatewayDevice.LANDevice.1.WLANConfiguration.1.KeyPassphrase",
+  "ui.device.2.type": "parameter-table",
+  "ui.device.2.object": "InternetGatewayDevice.LANDevice.1.Hosts.Host",
+  "ui.device.2.parameters.1.label": "Host name",
+  "ui.device.2.parameters.1.parameter": "HostName",
+  "ui.device.2.parameters.2.label": "IP address",
+  "ui.device.2.parameters.2.parameter": "IPAddress",
+  "ui.device.2.parameters.3.label": "MAC address",
+  "ui.device.2.parameters.3.parameter": "MACAddress"
 }
