--- a/config.json
+++ b/config.json
@@ -91,5 +91,6 @@
   "ui.device.2.parameters.2.label": "IP address",
   "ui.device.2.parameters.2.parameter": "IPAddress",
   "ui.device.2.parameters.3.label": "MAC address",
-  "ui.device.2.parameters.3.parameter": "MACAddress"
+  "ui.device.2.parameters.3.parameter": "MACAddress",
+  "ui.device.3.type": "device-faults"
 }
