Support nested parameter tables

--- a/config.json
+++ b/config.json
@@ -91,13 +91,13 @@
   "ui.device.30.parameters.11.parameter": "InternetGatewayDevice.LANDevice.1.WLANConfiguration.1.KeyPassphrase",
   "ui.device.40.type": "parameter-table",
   "ui.device.40.label": "WLAN hosts",
-  "ui.device.40.object": "InternetGatewayDevice.LANDevice.1.Hosts.Host",
-  "ui.device.40.parameters.1.label": "Host name",
-  "ui.device.40.parameters.1.parameter": "HostName",
-  "ui.device.40.parameters.2.label": "IP address",
-  "ui.device.40.parameters.2.parameter": "IPAddress",
-  "ui.device.40.parameters.3.label": "MAC address",
-  "ui.device.40.parameters.3.parameter": "MACAddress",
+  "ui.device.40.parameter": "InternetGatewayDevice.LANDevice.1.Hosts.Host",
+  "ui.device.40.childParameters.1.label": "Host name",
+  "ui.device.40.childParameters.1.parameter": "HostName",
+  "ui.device.40.childParameters.2.label": "IP address",
+  "ui.device.40.childParameters.2.parameter": "IPAddress",
+  "ui.device.40.childParameters.3.label": "MAC address",
+  "ui.device.40.childParameters.3.parameter": "MACAddress",
   "ui.device.50.type": "device-faults",
   "ui.device.60.type": "all-parameters",
   "ui.device.70.type": "device-actions"
