Implement authentication and access control

--- a/config.json
+++ b/config.json
@@ -1,6 +1,17 @@
 {
   "server.port": 3000,
   "server.nbi": "http://127.0.0.1:7557/",
+  "server.jwtSecret": "jwtSecret",
+  "auth.simple.users.admin.password": "admin",
+  "auth.simple.users.admin.roles": "admin",
+  "auth.simple.users.view.password": "view",
+  "auth.simple.users.view.roles": "view",
+  "permissions.admin.1.devices.access": 3,
+  "permissions.admin.1.devices.validate.pass": true,
+  "permissions.admin.1.faults.access": 3,
+  "permissions.admin.1.faults.validate.pass": true,
+  "permissions.view.1.devices.access": 2,
+  "permissions.view.1.faults.access": 2,
   "ui.pageSize": 10,
   "ui.filters.1.label": "Serial number",
   "ui.filters.1.parameter": "DeviceID.SerialNumber",
