--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
     "mithril": "^1.1.6",
+    "mongodb": "^3.0.10",
     "parsimmon": "^1.7.2"
   },
   "devDependencies": {
