--- a/config/config-sample.json
+++ b/config/config-sample.json
@@ -8,5 +8,7 @@
   "FS_INTERFACE" : "0.0.0.0",
   "FS_PORT" : 7567,
   "FS_HOSTNAME" : "acs.example.com",
+  "UI_INTERFACE" : "0.0.0.0",
+  "UI_PORT" : 3000,
   "DEBUG" : false
 }
