Move UI configs to DB

--- a/config/config-sample.json
+++ b/config/config-sample.json
@@ -10,5 +10,6 @@
   "FS_HOSTNAME" : "acs.example.com",
   "UI_INTERFACE" : "0.0.0.0",
   "UI_PORT" : 3000,
+  "UI_JWT_SECRET": "",
   "DEBUG" : false
 }
