--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
     "codemirror": "^5.40.0",
     "cssnano": "^4.0.5",
     "eslint": "^5.10.0",
+    "esm": "^3.1.1",
     "mithril": "^1.1.6",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "prettier": "^1.15.3",
+    "rollup": "^1.1.2",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-terser": "^4.0.2",
     "webpack": "^4.16.3",
-    "webpack-node-externals": "^1.7.2",
     "yaml": "^1.0.0"
   },
   "engines": {
@@ -53,8 +57,8 @@
     "compile": "echo 'Compile step no longer required, skipping.'",
     "configure": "if [ ! -f ./config/config.json ]; then cp ./config/config-sample.json ./config/config.json; fi",
     "install": "npm run configure",
-    "test": "ava --verbose --color",
-    "lint": "eslint --fix lib ui build test bin/*; prettier --write \"lib/**/*.js\" \"ui/**/*.js\" \"build/**/*.js\" \"test/**/*.js\" bin/*",
+    "test": "ava -r esm --verbose --color",
+    "lint": "eslint --fix lib ui build test bin/* tools/*; prettier --parser babylon --write \"lib/**/*.js\" \"ui/**/*.js\" \"build/**/*.js\" \"test/**/*.js\" bin/* tools/*",
     "build": "node build/build"
   }
 }
