--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -5,7 +5,6 @@
   },
   "parser": "babel-eslint",
   "parserOptions": {
-    "allowImportExportEverywhere": true,
-    "sourceType": "module"
+    "allowImportExportEverywhere": true
   }
 }
