--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "libxmljs": "^0.19.5",
     "mongodb": "^3.1.13",
     "parsimmon": "^1.12.0",
-    "seedrandom": "^2.4.4"
+    "seedrandom": "^2.4.4",
+    "yaml": "^1.3.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.3.0",
@@ -62,8 +63,7 @@
     "rollup-plugin-typescript": "^1.0.0",
     "ts-node": "^8.0.2",
     "typescript": "^3.3.3",
-    "webpack": "^4.29.5",
-    "yaml": "^1.3.2"
+    "webpack": "^4.29.5"
   },
   "engines": {
     "node": ">=8.14.0"
