Use current host as fallback for FS_HOSTNAME

--- a/config/config-sample.json
+++ b/config/config-sample.json
@@ -6,7 +6,7 @@
   "NBI_PORT" : 7557,
   "FS_INTERFACE" : "0.0.0.0",
   "FS_PORT" : 7567,
-  "FS_HOSTNAME" : "acs.example.com",
+  "FS_HOSTNAME" : "",
   "UI_INTERFACE" : "0.0.0.0",
   "UI_PORT" : 3000,
   "UI_JWT_SECRET": ""
