--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "tools": "tools"
   },
   "dependencies": {
-    "jsonwebtoken": "^8.4.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-compress": "^3.0.0",
@@ -29,41 +29,42 @@
     "koa-static": "^5.0.0",
     "later": "^1.2.0",
     "libxmljs": "^0.19.5",
-    "mongodb": "^3.1.13",
+    "mongodb": "^3.2.6",
     "parsimmon": "^1.12.0",
-    "seedrandom": "^2.4.4",
-    "yaml": "^1.3.2"
+    "seedrandom": "^3.0.1",
+    "yaml": "^1.6.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.3.0",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/koa": "^2.0.48",
-    "@types/koa-compress": "^2.0.8",
-    "@types/koa-router": "^7.0.39",
+    "@types/koa-compress": "^2.0.9",
+    "@types/koa-router": "^7.0.40",
     "@types/koa-static": "^4.0.1",
     "@types/libxmljs": "^0.18.3",
     "@types/mithril": "^1.1.16",
-    "@types/mongodb": "^3.1.19",
+    "@types/mongodb": "^3.1.28",
     "@types/parsimmon": "^1.10.0",
-    "@types/seedrandom": "^2.4.27",
-    "@typescript-eslint/eslint-plugin": "^1.3.0",
-    "ava": "^1.2.1",
-    "codemirror": "^5.43.0",
+    "@types/seedrandom": "^2.4.28",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "ava": "^2.0.0",
+    "codemirror": "^5.47.0",
     "cssnano": "^4.1.10",
-    "eslint": "^5.14.1",
-    "eslint-config-prettier": "^4.0.0",
-    "esm": "^3.2.5",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "esm": "^3.2.25",
     "mithril": "^1.1.6",
+    "postcss": "^7.0.16",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
-    "prettier": "^1.16.4",
-    "rollup": "^1.2.1",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-typescript": "^1.0.0",
-    "ts-node": "^8.0.2",
+    "prettier": "^1.17.1",
+    "rollup": "^1.13.1",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^5.0.0",
+    "rollup-plugin-typescript": "^1.0.1",
+    "ts-node": "^8.2.0",
     "typescript": "^3.3.3",
-    "webpack": "^4.29.5"
+    "webpack": "^4.32.2"
   },
   "engines": {
     "node": ">=8.14.0"
