--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "later": "^1.2.0",
-    "libxmljs": "^0.19.5",
     "mongodb": "^3.2.6",
     "parsimmon": "^1.12.0",
     "seedrandom": "^3.0.1",
     "yaml": "^1.6.0"
+  },
+  "optionalDependencies": {
+    "libxmljs": "^0.19.5"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.3.2",
