--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/koa-router": "^7.0.40",
     "@types/koa-static": "^4.0.1",
     "@types/libxmljs": "^0.18.3",
-    "@types/mithril": "^1.1.16",
+    "@types/mithril": "github:MithrilJS/mithril.d.ts#next",
     "@types/mongodb": "^3.1.28",
     "@types/parsimmon": "^1.10.0",
     "@types/seedrandom": "^2.4.28",
@@ -54,7 +54,7 @@
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "esm": "^3.2.25",
-    "mithril": "^1.1.6",
+    "mithril": "^2.0.0-rc.8",
     "postcss": "^7.0.16",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
