--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "esm": "^3.2.25",
     "mithril": "^2.0.0-rc.8",
     "postcss": "^7.0.16",
-    "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^1.17.1",
     "rollup": "^1.13.1",
     "rollup-plugin-json": "^4.0.0",
