--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/mongodb": "^3.1.28",
     "@types/parsimmon": "^1.10.0",
     "@types/seedrandom": "^2.4.28",
+    "@types/svgo": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "ava": "^2.0.0",
     "codemirror": "^5.47.0",
@@ -64,6 +65,7 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^5.0.0",
     "rollup-plugin-typescript": "^1.0.1",
+    "svgo": "^1.3.0",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1",
     "webpack": "^4.32.2"
