--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^5.0.0",
     "rollup-plugin-typescript": "^1.0.1",
+    "source-map-loader": "^0.2.4",
     "svgo": "^1.3.0",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1",
