--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
     "no-return-await": "error",
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/no-use-before-define": ["error", { "functions": false }],
-    "@typescript-eslint/explicit-function-return-type": ["error", { "allowExpressions": true }]
+    "@typescript-eslint/explicit-function-return-type": ["error", { "allowExpressions": true }],
+    "require-atomic-updates": 0,
+    "no-prototype-builtins": 0
   }
 }
