--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-compress": "^3.0.0",
-    "koa-jwt": "^3.5.1",
+    "koa-jwt": "^3.6.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "later": "^1.2.0",
     "mongodb": "^3.2.6",
-    "parsimmon": "^1.12.0",
+    "parsimmon": "^1.13.0",
     "seedrandom": "^3.0.1",
     "yaml": "^1.6.0"
   },
@@ -38,38 +38,39 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/koa": "^2.0.48",
+    "@types/koa": "^2.0.49",
     "@types/koa-compress": "^2.0.9",
-    "@types/koa-router": "^7.0.40",
+    "@types/koa-router": "^7.0.42",
     "@types/koa-static": "^4.0.1",
     "@types/libxmljs": "^0.18.3",
-    "@types/mithril": "github:MithrilJS/mithril.d.ts#next",
-    "@types/mongodb": "^3.1.28",
+    "@types/mithril": "^2.0.0",
+    "@types/mongodb": "^3.1.31",
     "@types/parsimmon": "^1.10.0",
     "@types/seedrandom": "^2.4.28",
     "@types/svgo": "^1.2.1",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "ava": "^2.0.0",
-    "codemirror": "^5.47.0",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "ava": "^2.2.0",
+    "codemirror": "^5.48.2",
     "cssnano": "^4.1.10",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
     "esm": "^3.2.25",
-    "mithril": "^2.0.0-rc.8",
-    "postcss": "^7.0.16",
+    "mithril": "^2.0.3",
+    "postcss": "^7.0.17",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^1.17.1",
-    "rollup": "^1.13.1",
+    "prettier": "^1.18.2",
+    "rollup": "^1.17.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^5.0.0",
+    "rollup-plugin-terser": "^5.1.1",
     "rollup-plugin-typescript": "^1.0.1",
     "source-map-loader": "^0.2.4",
     "svgo": "^1.3.0",
-    "ts-node": "^8.2.0",
-    "typescript": "^3.5.1",
-    "webpack": "^4.32.2"
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3",
+    "webpack": "^4.38.0"
   },
   "engines": {
     "node": ">=8.14.0"
