--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tools": "tools"
   },
   "dependencies": {
+    "iconv-lite": "^0.5.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
