--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "yaml": "^1.6.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@rollup/plugin-typescript": "^5.0.2",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/koa": "^2.0.49",
     "@types/koa-compress": "^2.0.9",
@@ -59,15 +63,13 @@
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
-    "rollup": "^1.17.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-terser": "^5.1.1",
-    "rollup-plugin-typescript": "^1.0.1",
-    "source-map-loader": "^0.2.4",
+    "rollup": "^2.23.0",
+    "rollup-plugin-terser": "^6.1.0",
+    "source-map-loader": "^1.0.1",
     "svgo": "^1.3.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
-    "webpack": "^4.38.0"
+    "webpack": "^4.44.0"
   },
   "engines": {
     "node": ">=8.14.0"
