--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/koa-static": "^4.0.1",
     "@types/mithril": "^2.0.4",
     "@types/mongodb": "^3.5.27",
+    "@types/node": "^14.11.10",
     "@types/parsimmon": "^1.10.3",
     "@types/seedrandom": "^2.4.28",
     "@types/svgo": "^1.3.3",
