--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "later": "^1.2.0",
     "mongodb": "^3.6.2",
     "parsimmon": "^1.16.0",
-    "seedrandom": "^3.0.5",
-    "yaml": "^1.10.0"
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
@@ -72,7 +71,8 @@
     "svgo": "^1.3.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
-    "webpack": "^5.2.0"
+    "webpack": "^5.2.0",
+    "yaml": "^1.10.0"
   },
   "engines": {
     "node": ">=12.13.0"
