--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@types/codemirror": "0.0.106",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.6",
     "@types/koa-compress": "^4.0.1",
@@ -67,11 +68,9 @@
     "prettier": "^2.1.2",
     "rollup": "^2.32.1",
     "rollup-plugin-terser": "^7.0.2",
-    "source-map-loader": "^1.1.1",
     "svgo": "^1.3.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
-    "webpack": "^5.2.0",
     "yaml": "^1.10.0"
   },
   "engines": {
