--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,8 +11,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "prettier/@typescript-eslint"
+    "prettier"
   ],
   "rules": {
     "no-shadow": ["error", { "allow": ["err"] }],
