--- a/package.json
+++ b/package.json
@@ -19,56 +19,56 @@
     "bin": "bin"
   },
   "dependencies": {
-    "espresso-iisojs": "^1.0.3",
-    "iconv-lite": "^0.6.2",
-    "ipaddr.js": "^2.0.0",
+    "espresso-iisojs": "^1.0.4",
+    "iconv-lite": "^0.6.3",
+    "ipaddr.js": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
-    "koa-compress": "^5.0.1",
-    "koa-jwt": "^4.0.0",
-    "koa-router": "^10.0.0",
+    "koa-compress": "^5.1.0",
+    "koa-jwt": "^4.0.1",
+    "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
     "later": "^1.2.0",
-    "mongodb": "^4.1.0",
-    "parsimmon": "^1.16.0",
+    "mongodb": "^4.1.2",
+    "parsimmon": "^1.18.0",
     "seedrandom": "^3.0.5"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-typescript": "^8.2.0",
-    "@types/codemirror": "0.0.108",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/koa": "^2.13.1",
-    "@types/koa-compress": "^4.0.1",
-    "@types/koa-router": "^7.4.1",
-    "@types/koa-static": "^4.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@types/codemirror": "^5.60.2",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/koa": "^2.13.4",
+    "@types/koa-compress": "^4.0.3",
+    "@types/koa-router": "^7.4.4",
+    "@types/koa-static": "^4.0.2",
     "@types/mithril": "^2.0.8",
-    "@types/node": "^14.14.34",
+    "@types/node": "^16.9.1",
     "@types/parsimmon": "^1.10.6",
-    "@types/seedrandom": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
+    "@types/seedrandom": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "ava": "^3.15.0",
-    "codemirror": "^5.59.4",
-    "cssnano": "^4.1.10",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
+    "codemirror": "^5.62.3",
+    "cssnano": "^5.0.8",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "esm": "^3.2.25",
     "mithril": "^2.0.4",
-    "postcss": "^8.2.8",
-    "postcss-import": "^14.0.0",
+    "postcss": "^8.3.6",
+    "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.1",
-    "rollup": "^2.41.2",
+    "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2",
     "sql.js": "^1.6.1",
-    "svgo": "^2.2.2",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.3.5",
-    "yaml": "^1.10.0"
+    "svgo": "^2.6.1",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3",
+    "yaml": "^1.10.2"
   },
   "engines": {
     "node": ">=12.13.0"
