--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier": "^2.2.1",
     "rollup": "^2.41.2",
     "rollup-plugin-terser": "^7.0.2",
+    "sql.js": "^1.6.1",
     "svgo": "^2.2.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.3.5",
