--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "sql.js": "^1.6.2",
     "svgo": "^2.7.0",
     "ts-node": "^10.4.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.4",
     "yaml": "^1.10.2"
   },
