--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "koa-static": "^5.0.0",
     "mongodb": "^4.1.3",
     "parsimmon": "^1.18.0",
+    "pg": "^8.7.3",
     "seedrandom": "^3.0.5"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "@types/mithril": "^2.0.8",
     "@types/node": "^16.11.6",
     "@types/parsimmon": "^1.10.6",
+    "@types/pg": "^8.6.5",
     "@types/seedrandom": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
