--- a/package.json
+++ b/package.json
@@ -28,46 +28,47 @@
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.1.0",
     "koa-jwt": "^4.0.3",
-    "koa-router": "^10.1.1",
+    "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
-    "mongodb": "^4.1.3",
-    "parsimmon": "^1.18.0",
+    "mongodb": "^4.9.0",
+    "parsimmon": "^1.18.1",
     "seedrandom": "^3.0.5"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.4",
     "@types/codemirror": "^5.60.5",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/koa": "^2.13.4",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/koa": "^2.13.5",
     "@types/koa-compress": "^4.0.3",
     "@types/koa-router": "^7.4.4",
     "@types/koa-static": "^4.0.2",
-    "@types/mithril": "^2.0.8",
-    "@types/node": "^16.11.6",
+    "@types/mithril": "^2.0.11",
+    "@types/node": "^18.7.9",
     "@types/parsimmon": "^1.10.6",
-    "@types/seedrandom": "^3.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@types/seedrandom": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "ava": "^3.15.0",
-    "codemirror": "^5.63.3",
-    "cssnano": "^5.0.8",
-    "eslint": "^8.1.0",
-    "eslint-config-prettier": "^8.3.0",
+    "codemirror": "^5.65.8",
+    "cssnano": "^5.1.13",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
     "esm": "^3.2.25",
-    "mithril": "^2.0.4",
-    "postcss": "^8.3.11",
-    "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.4.1",
-    "rollup": "^2.58.3",
+    "mithril": "^2.2.2",
+    "postcss": "^8.4.16",
+    "postcss-color-mod-function": "^3.0.3",
+    "postcss-import": "^14.1.0",
+    "postcss-preset-env": "^7.8.0",
+    "prettier": "^2.7.1",
+    "rollup": "^2.78.1",
     "rollup-plugin-terser": "^7.0.2",
-    "sql.js": "^1.6.2",
-    "svgo": "^2.7.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
+    "sql.js": "^1.7.0",
+    "svgo": "^2.8.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4",
     "yaml": "^1.10.2"
   },
   "engines": {
