--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -32,8 +32,8 @@ jobs:
           context: ./
           push: true
           tags: |
-            ewertonmarschalk/genieacs-nbi:latest
-            ewertonmarschalk/genieacs-nbi:${{github.run_number}}
+            creztfallen/genieacs-nbi:latest
+            creztfallen/genieacs-nbi:${{github.run_number}}
   CI-fs:
     runs-on: ubuntu-latest
 
@@ -54,8 +54,8 @@ jobs:
           context: ./
           push: true
           tags: |
-            ewertonmarschalk/genieacs-fs:latest
-            ewertonmarschalk/genieacs-fs:${{github.run_number}}
+            creztfallen/genieacs-fs:latest
+            creztfallen/genieacs-fs:${{github.run_number}}
   CI-ui:
     runs-on: ubuntu-latest
 
@@ -77,8 +77,8 @@ jobs:
           context: ./
           push: true
           tags: |
-            ewertonmarschalk/genieacs-ui:latest
-            ewertonmarschalk/genieacs-ui:${{github.run_number}}
+            creztfallen/genieacs-ui:latest
+            creztfallen/genieacs-ui:${{github.run_number}}
   CI-cwmp:
     runs-on: ubuntu-latest
 
