Squashed commit of the following:
commit 566cda686b1f8c91cafd059f08c1212cfdab3d74
Author: andre <andredriem@gmail.com>
Date:   Thu Nov 24 18:15:13 2022 -0300

    low level

commit 3f5902f95b78ae845cd0f827d6df0271899a3afc
Author: andre <andredriem@gmail.com>
Date:   Mon Nov 21 02:19:40 2022 -0300

    nightly

commit cfe76fb91eff5a717134d8df86a6a45e5c125fef
Author: andre <andredriem@gmail.com>
Date:   Thu Sep 22 13:26:59 2022 -0300

    Release

commit e4192a03dbf6d4b5faa500ee04489018278c288d
Author: andre <andredriem@gmail.com>
Date:   Fri Sep 9 20:14:47 2022 -0300

    stuff i'm working on

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["ES2019", "dom"],
-    "module": "ES2020",
+    "esModuleInterop": true,
     "moduleResolution": "node",
-    "target": "ES2019",
+    "module": "CommonJS",
+    "target": "ES2020",
+    "skipLibCheck":true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
@@ -17,5 +18,5 @@
     "./ui/**/*",
     "./test/**/*",
     "./build/**/*"
-  ]
+  ],
 }
