--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "@breejs/later": "^4.1.0",
-    "babel-preset-env": "^1.7.0",
     "espresso-iisojs": "^1.0.4",
     "iconv-lite": "^0.6.3",
     "ipaddr.js": "^2.0.1",
@@ -54,14 +53,13 @@
     "@types/seedrandom": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
-    "ava": "^4.3.3",
+    "ava": "^3.15.0",
     "codemirror": "^5.63.3",
     "cssnano": "^5.0.8",
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "esm": "^3.2.25",
     "mithril": "^2.0.4",
-    "nodemon": "^2.0.19",
     "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
@@ -70,8 +68,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "sql.js": "^1.6.2",
     "svgo": "^2.7.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4",
     "yaml": "^1.10.2"
   },
   "engines": {
@@ -83,9 +81,6 @@
     "lint-prettier": "prettier --prose-wrap always --write .",
     "lint-tsc": "tsc --noEmit",
     "lint": "npm run lint-eslint && npm run lint-prettier && npm run lint-tsc",
-    "build": "node -r esm -r ts-node/register/transpile-only build/build",
-    "cwmp-dev": "nodemon bin/genieacs-cwmp.ts",
-    "ui-dev": "nodemon bin/genieacs-ui.ts"
-
+    "build": "node -r esm -r ts-node/register/transpile-only build/build"
   }
 }
