--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "mongodb": "^4.9.0",
+    "net": "^1.0.2",
     "parsimmon": "^1.18.1",
     "seedrandom": "^3.0.5"
   },
