fixing tsconfig.json as it was before npm run build started to fail

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,6 @@
 {
-  "ts-node": {
-    "compilerOptions": {
-      "module": "commonjs"
-    }
-  },
   "compilerOptions": {
-    "lib": [
-      "ES2019",
-      "dom"
-    ],
+    "lib": ["ES2019", "dom"],
     "module": "ES2020",
     "moduleResolution": "node",
     "target": "ES2019",
