--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
-    "lib": ["ES2019", "dom"],
-    "module": "ES2020",
+    "lib": ["ES2022", "dom"],
+    "module": "ES2022",
     "moduleResolution": "node",
-    "target": "ES2019",
+    "target": "ES2022",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
     "noImplicitReturns": true,
     "strictFunctionTypes": true,
-    "allowJs": true
+    "isolatedModules": true
   },
   "include": [
     "./bin/*.ts",
