--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@types/seedrandom": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "ava": "^3.15.0",
     "codemirror": "^5.65.16",
     "esbuild": "^0.19.9",
     "eslint": "^8.56.0",
@@ -63,7 +62,7 @@
     "node": ">=12.13.0"
   },
   "scripts": {
-    "test": "esbuild --log-level=warning --bundle --platform=node --target=node12 --packages=external --outdir=test test/*.ts && ava --verbose --color && rm test/*.js",
+    "test": "esbuild --log-level=warning --bundle --platform=node --target=node18 --packages=external --outdir=test test/*.ts && node --test test/*.js && rm test/*.js",
     "lint": "esbuild build/lint.ts --bundle --platform=node --target=node16 --packages=external | node",
     "build": "esbuild build/build.ts --bundle --platform=node --target=node12 --packages=external | node"
   }
