--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@breejs/later": "^4.1.0",
+    "bson": "^4.7.2",
     "espresso-iisojs": "^1.0.7",
     "iconv-lite": "^0.6.3",
     "ipaddr.js": "^2.0.1",
