--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
   },
   "license": "AGPL-3.0",
   "private": true,
-  "directories": {
-    "bin": "bin"
+  "bin": {
+    "genieacs-cwmp": "bin/genieacs-cwmp",
+    "genieacs-fs": "bin/genieacs-fs",
+    "genieacs-nbi": "bin/genieacs-nbi",
+    "genieacs-ui": "bin/genieacs-ui"
   },
   "dependencies": {
-    "@breejs/later": "^4.1.0",
+    "@breejs/later": "^4.2.0",
     "bson": "^4.7.2",
     "espresso-iisojs": "^1.0.8",
     "iconv-lite": "^0.6.3",
     "ipaddr.js": "^2.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "koa": "^2.13.4",
+    "jsonwebtoken": "^9.0.2",
+    "koa": "^2.15.1",
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.1.0",
     "koa-jwt": "^4.0.3",
@@ -40,26 +43,26 @@
   },
   "devDependencies": {
     "@types/codemirror": "^5.60.15",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/koa": "^2.13.5",
-    "@types/koa-compress": "^4.0.3",
-    "@types/koa-router": "^7.4.4",
-    "@types/koa-static": "^4.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/koa": "^2.15.0",
+    "@types/koa-compress": "^4.0.6",
+    "@types/koa-router": "^7.4.8",
+    "@types/koa-static": "^4.0.4",
     "@types/mithril": "^2.2.6",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.11.29",
     "@types/parsimmon": "^1.10.9",
     "@types/seedrandom": "^3.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "codemirror": "^5.65.16",
-    "esbuild": "^0.19.9",
-    "eslint": "^8.56.0",
+    "esbuild": "^0.20.2",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "mithril": "^2.2.2",
-    "prettier": "^3.1.1",
-    "sql.js": "^1.7.0",
-    "svgo": "^2.8.0",
-    "typescript": "^5.3.3",
+    "prettier": "^3.2.5",
+    "sql.js": "^1.10.2",
+    "svgo": "^3.2.0",
+    "typescript": "^5.4.2",
     "yaml": "^1.10.2"
   },
   "engines": {
