--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "koa-compress": "^5.1.0",
     "koa-jwt": "^4.0.3",
     "koa-router": "^12.0.0",
-    "koa-static": "^5.0.0",
+    "koa-send": "^5.0.1",
     "mongodb": "^4.16.0",
     "parsimmon": "^1.18.1",
     "seedrandom": "^3.0.5"
@@ -47,7 +47,6 @@
     "@types/koa": "^2.15.0",
     "@types/koa-compress": "^4.0.6",
     "@types/koa-router": "^7.4.8",
-    "@types/koa-static": "^4.0.4",
     "@types/mithril": "^2.2.6",
     "@types/node": "^20.14.2",
     "@types/parsimmon": "^1.10.9",
