--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   },
   "dependencies": {
     "@breejs/later": "^4.2.0",
+    "@koa/bodyparser": "^5.1.1",
+    "@koa/router": "^13.1.0",
     "bson": "^4.7.2",
     "espresso-iisojs": "^1.0.8",
     "iconv-lite": "^0.6.3",
     "ipaddr.js": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
-    "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.1.0",
     "koa-jwt": "^4.0.3",
-    "koa-router": "^12.0.0",
     "koa-send": "^5.0.1",
     "mongodb": "^4.16.0",
     "parsimmon": "^1.18.1",
@@ -46,7 +46,6 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa-compress": "^4.0.6",
-    "@types/koa-router": "^7.4.8",
     "@types/mithril": "^2.2.6",
     "@types/node": "^20.14.2",
     "@types/parsimmon": "^1.10.9",
